Fixed rounded corners for imageless search info cards

--- a/style-exported.css
+++ b/style-exported.css
@@ -36,6 +36,9 @@
   .cv2VAd { /* Small top info cards relevant to search */
     border-radius: /*[[border-radius]]*/;
   }
+  .Mw2I7 { /* Small top info cards relevant to search (imageless) */
+      border-radius: /*[[border-radius]]*/;
+  }
   .qmv19b { /* Top stories */
     border-radius: /*[[border-radius]]*/;
   }
