--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
 .cv2VAd { /* Small top info cards relevant to search */
     border-radius: 2px;
 }
+.Mw2I7 { /* Small top info cards relevant to search (imageless) */
+    border-radius: 2px;
+}
 .qmv19b { /* Top stories */
     border-radius: 2px;
 }
