--- a/style-exported.css
+++ b/style-exported.css
@@ -20,6 +20,9 @@
     .minidiv .Tg7LZd { /* Search icon in search bar (when scrolling) */
         padding-right: 0px;
     }
+    .Gj7ine { /* Image search thumbnail in search bar */
+        border-radius: /*[[border-radius]]*/;
+    }
     .sbct:first-child .suggestions-inner-container { /* Border above an autocomplete word */
         border-top: 0px;
     }
