--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 .minidiv .RNNXgb { /* Search bar (when scrolling) */
     border-radius: 2px;
 }
+.sbibod { /* Search bar when in category tab */
+    border-radius: 2px;
+}
 .aajZCb { /* Autocomplete suggestions */
     border-radius: 2px;
 }
@@ -52,6 +55,18 @@ div.AEprdc.vk_c { /* Google Maps insert body */
 .Wrsj9b { /* Sports info card */
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+}
+.RAYh1e{ /* Google Account sign in wrapper */
+    border-radius: 2px;
+}
+.A3sRAb { /* Google Account sign in email box */
+    border-radius: 2px;
+}
+.nDKKZc.O0WRkf { /* Google Account sign in button */
+    border-radius: 2px;
+}
+.GyDlGb { /* Google Account sign in account selector */
+    border-radius: 2px;
 }
 
 
