--- a/style.css
+++ b/style.css
@@ -56,19 +56,6 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
 }
-.RAYh1e{ /* Google Account sign in wrapper */
-    border-radius: 2px;
-}
-.A3sRAb { /* Google Account sign in email box */
-    border-radius: 2px;
-}
-.nDKKZc.O0WRkf { /* Google Account sign in button */
-    border-radius: 2px;
-}
-.GyDlGb { /* Google Account sign in account selector */
-    border-radius: 2px;
-}
-
 
 /* Google Images */
 .zZ86of .Mw2I7 { /* Suggested keywords */
@@ -111,4 +98,78 @@ div.AEprdc.vk_c { /* Google Maps insert body */
 }
 .ZqhUjb.MDgEWb { /* Top share buttons */
     border-radius: 2px;
+}
+
+/* Google Account */
+.RAYh1e{ /* Sign-in main wrapper */
+    border-radius: 2px;
+}
+.A3sRAb { /* Sign-in email box */
+    border-radius: 2px;
+}
+.nDKKZc.O0WRkf { /* Sign in button */
+    border-radius: 2px;
+}
+.GyDlGb { /* Sign-in account Selector */
+    border-radius: 2px;
+}
+.XLK0Od { /* Account settings tile */
+    border-radius: 2px;
+}
+.gb_De.gb_la { /* Account settings search */
+    border-radius: 2px;
+}
+.EhlvJf { /* Sidebar tabs */
+    border-radius: 0 2px 2px 0;
+}
+.hyMrOd { /* 2FA wrapper */
+    border-radius: 2px;
+}
+
+/* Google Support */
+.page { /* Main page */
+    border-radius: 2px;
+}
+.hcfe .promoted-search__input{ /* Community search box */
+    border-radius: 2px;
+}
+.material-card{ /* Info cards */
+    border-radius: 2px;
+}
+a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
+    border-left: none;
+    border-right: none;
+}
+
+/* Google Takeout */
+.KC1dQ{ /* Latest archive wrapper */
+    border-radius: 2px;
+}
+.nmfOee.Rj2Mlf{ /* Latest archive download button */
+    border-radius: 2px;
+}
+.VfPpkd-LgbsSe{ /* Latest archive "Manage Archives" button */
+    border-radius: 2px;
+}
+.g81fxb:first-child{ /* Archive creator top */
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.g81fxb.ROuVee{ /* Archive creator bottom */
+    border-radius: 2px;
+}
+.g81fxb:last-child, .g81fxb.ROuVee + .g81fxb{ /* Customise archive format */
+    border-radius: 2px;
+}
+.I7OXgf{ /* Content options/formats popup */
+    border-radius: 2px;
+}
+.g81fxb:last-child { /* Customize archive format bottom */
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.JaX6Fb, .g81fxb:last-child{ /* Archive creation placeholder */
+    border-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
