--- a/style-exported.css
+++ b/style-exported.css
@@ -16,7 +16,7 @@
         border-bottom-left-radius: /*[[border-radius]]*/;
         border-bottom-right-radius: /*[[border-radius]]*/;
     }
-    .emcav.emcat .RNNXgb { /* Search bar when an autocomplete word shows */
+    .minidiv .emcav.emcat .RNNXgb, .emcav.emcat .RNNXgb { /* Search bar when an autocomplete word shows */
         border-bottom-left-radius: /*[[border-radius]]*/;
         border-bottom-right-radius: /*[[border-radius]]*/;
     }
