Added option to enable a square parody of the Google logo. Disabled by default.

--- a/style-exported.css
+++ b/style-exported.css
@@ -1,4 +1,7 @@
 @-moz-document domain("google.com") {
+    /* Square Google logo */
+    /*[[square-logo]]*/
+
     /* Google Search */
     .RNNXgb { /* Search bar */
         border-radius: /*[[border-radius]]*/;
