--- a/style.css
+++ b/style.css
@@ -56,6 +56,21 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
 }
+.cF4V5c { /* "More" search categories box */
+    border-radius: 2px;
+}
+.RAYh1e{ /* Google Account sign in wrapper */
+    border-radius: 2px;
+}
+.A3sRAb { /* Google Account sign in email box */
+    border-radius: 2px;
+}
+.nDKKZc.O0WRkf { /* Google Account sign in button */
+    border-radius: 2px;
+}
+.GyDlGb { /* Google Account sign in account selector */
+    border-radius: 2px;
+}
 
 /* Google Images */
 .zZ86of .Mw2I7 { /* Suggested keywords */
@@ -68,6 +83,9 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-radius: 2px;
 }
 .Mw2I7 { /* Small top info cards relevant to search (imageless) */
+    border-radius: 2px;
+}
+.lU8dJf { /* Inline image related searches */
     border-radius: 2px;
 }
 
@@ -120,10 +138,13 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-radius: 2px;
 }
 .EhlvJf { /* Sidebar tabs */
-    border-radius: 0 2px 2px 0;
+    border-radius: 0px 2px 2px 0px;
 }
 .hyMrOd { /* 2FA wrapper */
     border-radius: 2px;
+}
+.RZBuIb .sZwd7c { /* Top progress bar corners */
+    border-radius: 0px 0px 0px 0px;
 }
 
 /* Google Support */
@@ -172,4 +193,33 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
     border-radius: 2px;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
+}
+
+/* Google Drive */
+.gb_Be { /* Search bar */
+    border-radius: 2px;
+}
+.gb_fa { /* G-Suite badge */
+    border-radius: 2px;
+}
+.a-D-gc-wKOTTc .a-ec-Gd button.RTMQvb { /* +New button */
+    border-radius: 2px;
+}
+.a-dkl3Ye .a-U-J { /* Left sidebar folder buttons */
+    border-radius: 0px 2px 2px 0px;
+}
+.a-dkl3Ye .L202Xe { /* Quick Access files */
+    border-radius: 2px;
+}
+.a-dkl3Ye .a-w { /* Context menu */
+    border-radius: 2px;
+}
+.a-dkl3Ye .o-Yc-o-T:hover{ /* Breadcrumbs */
+    border-radius: 2px;
+}
+.a-dkl3Ye .a-l-S-Pc-w-d.h-R-w-d-W, .a-dkl3Ye .a-l-S-Pc-w-d.h-R-w-d-pb{ /* Focused breadcrumb */
+    border-radius: 2px;
+}
+.a-b-Tb-j { /* Preview error */
+    border-radius: 2px;
 }
