--- a/style.css
+++ b/style.css
@@ -196,8 +196,17 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
 }
 
 /* Google Drive */
-.gb_Be { /* Search bar */
+.gb_Be,.gb_Qe { /* Search bar */
     border-radius: 2px;
+}
+.gb_Qe button:hover svg{ /* Search bar arrow dropdown button */
+    border-radius: 2px;   
+}
+.gb_Qe button svg{ /* Search bar arrow dropdown button padding fix */
+    margin: 3px -1px 3px 3px;
+}
+.gb_Qe.gb_jf{ /* Search bar with dropdown */
+    border-radius: 2px 2px 0 0;
 }
 .gb_fa { /* G-Suite badge */
     border-radius: 2px;
@@ -208,7 +217,7 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
 .a-dkl3Ye .a-U-J { /* Left sidebar folder buttons */
     border-radius: 0px 2px 2px 0px;
 }
-.a-dkl3Ye .L202Xe { /* Quick Access files */
+.a-dkl3Ye .L202Xe, .a-dkl3Ye .Onyn4c { /* Quick Access files */
     border-radius: 2px;
 }
 .a-dkl3Ye .a-w { /* Context menu */
@@ -221,6 +230,18 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
     border-radius: 2px;
 }
 .a-b-Tb-j { /* Preview error */
+    border-radius: 2px;
+}
+.a-nEbBXb .a-c-d { /* Right breadcrumb bar buttons */
+    border-radius: 2px;
+}
+.Ewn2Sd:not(.C0fwCb):hover{ /* Top bar support button */
+    border-radius: 2px;
+}
+.gb_y:hover{ /* Google Apps button */
+    border-radius: 2px;
+}
+.Kk7lMc-QWPxkf-d .Yb-Il-d-c-Nd{ /* Lower-right sidebar toggle button */
     border-radius: 2px;
 }
 
